fixes issue #4: radio buttons are too dang small on mobile platforms

--- a/app/public/assets/css/style.css
+++ b/app/public/assets/css/style.css
@@ -89,6 +89,13 @@ body {
 	clear: right;
 }
 
+input[type="radio"] {
+	position: relative;
+	top: 0.4em;
+	width: 2.5em;
+	height: 2.5em;
+}
+
 .survey--button {
 	font-size: 1.5em;
 	border: thin black solid;
